--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To my Portfolio</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">Hello, my name is</div>
+                <div class="intro-heading">Eli, I'm a <span class="typing"></span></div>
                 <a class="btn btn-xl js-scroll-trigger" href="#services">Tell Me More</a>
             </div>
         </div>
@@ -253,6 +253,7 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
 
