--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Coding Academy</title>
+    <title>My Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -95,6 +95,10 @@
             </div>
         </div>
     </header>
+    <!-- header loading page -->
+    <!-- <div class="background-loading-page">
+
+    </div> -->
 
     <!-- Services -->
     <a name="services"></a>
