--- a/index.html
+++ b/index.html
@@ -116,8 +116,12 @@
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Front-end</h4>
+
+
+                    <p class="text-muted">As a web developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced libraries. I work with designer for making some responsive website.</p>
+                    <!-- React. Back-end Utilising php frameworks, working with databases and coding with languages such as MySQL and
+                        JSON. Also fimiliar with ERD architecture design -->
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -181,7 +185,8 @@
                 </div>
             </div>
             <div class="col-sm-8 flex-align-center">
-                <p class="large text-muted  about-description">My name is Eli Granat and I'm a software engineering student at coding_academy. The past years I served as a IDF Officer</p>
+                <p class="large text-muted  about-description">My name is Eli Granat and I'm a software engineering student at coding_academy. The past years I served as a IDF Officer, and now I'm a based in Ranat Gan, Israel.<br> A serious person, seeking to improve the teams' effectiveness at work.
+                    Spend extra time and effort to make the work to be more effectively and fast. A team player who want to improve the team motivation for our succeed.</p>
             </div>
         </div>
     </section>
