--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Hello, my name is</div>
-                <div class="intro-heading">Eli, I'm a <span class="typing"></span></div>
+                <div class="intro-heading">Eli, I'm a <br><span class="typing"></span></div>
                 <a class="btn btn-xl js-scroll-trigger" href="#services">Tell Me More</a>
             </div>
         </div>
