--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 </head>
 
-<body id="page-top">
+<!-- <body id="page-top">
     <div class="offcanvas-btn" onclick="openCanvas()">
         <i class="fa fa-comment" aria-hidden="true"></i>
-    </div>
+    </div> -->
     <aside class="offcanvas-aside">
         <a href="./projects/touchTheNums/index.html"></a>
         <!-- Contact -->
