--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
+                         <li class="list-inline-item">
+                            <a href="https://instagram.com/eli_granat">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </li>
                         <li class="list-inline-item">
                             <a href="https://github.com/EliGranat">
                                 <i class="fa fa-github"></i>
