--- a/index.html
+++ b/index.html
@@ -208,18 +208,23 @@
                 <div class="col-md-4 flex-align-center">
                     <ul class="list-inline social-buttons flex-align-center">
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://twitter.com/eligranat">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
-                        <li class="list-inline-item flex-align-center">
-                            <a href="#">
+                        <li class="list-inline-item">
+                            <a href="https://facebook.com/aaa.granat.zzz">
                                 <i class="fa fa-facebook"></i>
                             </a>
                         </li>
+                         <li class="list-inline-item">
+                            <a href="https://instagram.com/eli_granat">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </li>
                         <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fa fa-linkedin"></i>
+                            <a href="https://github.com/EliGranat">
+                                <i class="fa fa-github"></i>
                             </a>
                         </li>
                     </ul>
